--- a/css/index.css
+++ b/css/index.css
@@ -14,3 +14,14 @@ html {
     --hover: gray;
     --active: #98be6c;
 }
+
+/* title bar - start */
+.title-bar {
+    background-color: black;
+    padding: 1rem 2rem;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: white;
+    font-size: 2rem;
+    position: relative;
+}
+/* title bar - end */
