--- a/css/index.css
+++ b/css/index.css
@@ -24,4 +24,104 @@ html {
     font-size: 2rem;
     position: relative;
 }
+
 /* title bar - end */
+body::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+}
+
+/* menu bar - start */
+.menu-bar {
+    top: 0;
+    width: 100%;
+    background-color: var(--secondary);
+    font-size: 2rem;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    backdrop-filter: blur(5px);
+    position: sticky;
+}
+
+.menu-bar>.menu-btn {
+    display: flex;
+    position: relative;
+    width: 100%;
+}
+
+@media screen and (max-width: 400px) {
+    .menu-bar>.menu-btn {
+        width: fit-content;
+    }
+
+    .menu-bar>.menu-btn:hover .menu-list {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+.menu-btn>.btn {
+    background-color: var(--hover);
+    color: white;
+    position: relative;
+    display: none;
+}
+
+@media screen and (max-width: 400px) {
+    .menu-btn>.btn {
+        display: block;
+    }
+}
+
+.menu-btn>.btn:hover {
+    background-color: var(--active);
+}
+
+.menu-btn>.btn:active {
+    background-color: var(--hover);
+}
+
+.menu-btn>.menu-list {
+    display: flex;
+    flex-basis: 100%;
+    position: relative;
+}
+
+@media screen and (max-width: 400px) {
+    .menu-btn>.menu-list {
+        display: none;
+        width: 100vw;
+        position: absolute;
+        top: 0;
+        background-color: #eee;
+    }
+}
+
+.menu-btn>.btn, .menu-list>div {
+    padding: 10px;
+    text-align: center;
+    cursor: default;
+    flex-basis: 100px;
+    position: relative;
+}
+@media screen and (max-width: 400px) {
+    .menu-list>div {
+        text-align: left;
+    }
+}
+@media screen and (max-width: 500px) {
+    .menu-list>div {
+        flex-basis: 100%;
+    }
+}
+
+.menu-list>div:hover {
+    background-color: var(--active);
+    color: white;
+}
+
+.menu-list>div:active {
+    background-color: var(--hover);
+    color: white;
+}
+
+/* menu bar - end */
